Adjust tables to avoid overflowing screen on smaller devices

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -194,6 +194,11 @@ section {
     margin: 0 20px;
 }
 
+table {
+    table-layout: fixed;
+    word-wrap: break-word;
+}
+
 .navbar-nav li.loader {
     margin: 12px 24px 0 6px;
 }
